--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "@walletconnect/client": "^1.6.6",
+    "@walletconnect/qrcode-modal": "^1.6.6",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
@@ -25,7 +27,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
