--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@walletconnect/client": "^1.6.6",
     "@walletconnect/qrcode-modal": "^1.6.6",
+    "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
@@ -28,6 +29,7 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.1",
+    "web3modal": "^1.9.4",
     "websocket": "^1.0.34"
   },
   "scripts": {
