--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@walletconnect/client": "^1.6.6",
     "@walletconnect/qrcode-modal": "^1.6.6",
     "@walletconnect/web3-provider": "^1.6.6",
+    "apexcharts": "^3.30.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
