--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 REACT_APP_ENV=prod
 REACT_APP_TRUST_BRIDGE=https://bridge.walletconnect.org
+REACT_APP_COIN_BASE_URL=https://api.coinbase.com
+REACT_APP_TIMEOUT=20000
