--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "apexcharts": "^3.30.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "crypto": "^1.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "request": "^2.88.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.1",
