--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.30.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "coingecko-api-v3": "0.0.13",
     "crypto": "^1.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
